--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/vue-table": "^8.21.2",
     "@vueuse/motion": "^2.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
