--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 # .env
 
 # Base API endpoint for your application
-VITE_API_ENDPOINT=https://api-payments.jodogaming.com
+VITE_API_ENDPOINT=https://api-payments.jodogaming.com/api/jodogaming
 
 # Endpoint for serving images (if separate from your API)
-VITE_IMAGE_ENDPOINT=https://images.example.com
+# VITE_IMAGE_ENDPOINT=https://images.example.com
+
+VITE_APP_NAME="lapakwidi"
